sayfanın yüklenmesi tab listener api ile dinlendiğinde gereksiz yere bekleniyordu yerine webnavigation api kullanıldı. 
url validation uzun sürdüğü için kaldırıldı.

v1.3
yeni özellik: bir sunucu, kullancı verilerini toplamak ve işlemek üzere yazıldı.
bug fix: url yönlendirmenin bazen çalışmaması durumu nedeniyle timer mekanizması eklendi.
bug fix: execute script'in çalışmaması durumu handle edildi artık hata üretmiyor ama loglanıyor.
bug fix: semsiye.png'nin manifest içinde web accessable resource path'i düzenlendi. (ama yine de çalışıyordu)
listeden yazar engelle sayfası options page yerine normal sayfaya çevrildi.
kullanıcının ekşi nicki scrape edildi.
custom bir logger mekanizması geliştirildi.

SONRAKİ GÜNCELLEMEDE YAPILMASI PLANLANANLAR
undoban all işlemi sürerken sayfada bir popup ile işlemin sürdüğü bilgilendirilebilir.
undoban all işlemi bittiğinde sayfa otomatik kapanabilir.
performans analizi yapılmalı
  logger'ın etkisi gözlemlenmeli
    array silindiğinde gerçekten bellekten siliniyor mu, reflerden dolayı memory leak oluşuyor mu?
    log.getData yeni arraylere kopyalanıyor mu, ref değeri mi dönüyor?
    obje içinde array silindiğinde reflerin durumu ne oluyor?
takip edilen yazarlar engellensin mi ayarı eklenebilir
server ile haberleşme şifreli olmalı
[belki]engel nedeni seçilebilmeli
istatiki sonuçlar görüntülenebilmeli
[belki]istatistiki verilere göre engel yapılabilmeli
10000 yazarı engellediği görüldü (5000 yazar ekşi limiti) readme sayfasına eklenebilir.
çok uzun yazarlı entrylerde liste scrape edilirken bilgisayar ya da internet yavaşsa timeout olabiliyor şu an 15 saniye limiti var 

BİR ARA YAPILMASI PLANLANANLAR
test yazılımı(geliştiriliyor.)
firefox desteği (hiçbir şey düzgün çalışmıyor, manifest v3 desteği bile tam gelmemiş)
listeneden engelleme için ekşi hesabına girilip girilmediği kontrol edilmeli
log mekanizması daha iyi hale getirilmeli
engellenen yazarların engeli kaldırılabilmeli
google analytics