@@ -5,10 +5,11 @@ class CommHandler
 		this.log = logger;
 	}
 	
-	sendData = async (config, authList, clientName) =>
+	sendData = async (config, clientName, banSource, banMode, authList) =>
 	{
 		let dataToServerObj = {};
-			
+		
+    // name
 		if(config.sendClientName)
 		{
 			if(clientName)
@@ -20,7 +21,23 @@ class CommHandler
 		{
 			dataToServerObj.name = config.anonymouseClientName;
 		}
-		
+    
+    // ban_source
+    dataToServerObj.banSource = banSource;
+    
+    // ban_mode
+    dataToServerObj.banMode = banMode;
+    
+    // fav_entry
+    dataToServerObj.favEntry = "Not implemented";
+    
+    // fav_title
+    dataToServerObj.favTitle = "Not implemented";
+    
+    // fav_author
+		dataToServerObj.favAuthor = "Not implemented";
+    
+    // author_list
 		if(config.sendAuthorList)
 		{
 			dataToServerObj.authList = authList;
@@ -30,12 +47,15 @@ class CommHandler
 			dataToServerObj.authList = [];
 		}
 		
+    // log_level and log
 		if(config.sendLog)
 		{
+			dataToServerObj.logLevel = this.log.getLevel();
 			dataToServerObj.log = this.log.getData();
 		}
 		else
 		{
+      dataToServerObj.logLevel = "DISABLED";
 			dataToServerObj.log = [];
 		}
 		
