@@ -1,0 +1,9 @@
+const BanSource = {
+  FAV:  "FAV",
+  LIST: "LIST"
+};
+
+const BanMode = {
+  BAN:     "BAN",
+  UNDOBAN: "UNDOBAN"
+};
